--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 
 
+<button id="addBtn" onclick="addForum()">add book</button>
 
+
+<div id="forumContainer">forum container</div>
 
 
 <script src='app.js'></script>
