apply grid to cards display/addbook forum

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 	<title>library</title>
 </head>
 <body>
+	<button id="addBtn" onclick="addForum()">add book</button>
+
+
+<div id="forumContainer"></div>
+
+
 <div id="cardsContainer"></div>
 
 
-
-<button id="addBtn" onclick="addForum()">add book</button>
-
-
-<div id="forumContainer">forum container</div>
 
 
 <script src='app.js'></script>
