changing bg color, cards color + added title header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<title>library</title>
 </head>
 <body>
+
+<h1 class="titleHeader">Library</h1>
+
+
 	<button id="addBtn" onclick="addForum()">add book</button>
 
 
