--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 
 <h1 class="titleHeader">Library</h1>
-
+<div class="btnContainer">
 
 	<button id="addBtn" onclick="addForum()">add book</button>
 
-
+</div>
 <div id="forumContainer"></div>
 
 
