add hide 'addbook' forum logic

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1 class="titleHeader">Library</h1>
 <div class="btnContainer">
 
-	<button id="addBtn" onclick="addForum()">add book</button>
+	<button id="addBookBtn" onclick="addForum()">add book</button>
 
 </div>
 <div id="forumContainer"></div>
